--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -14,15 +14,13 @@ html, body
 :root
     --main-yellow: #FBF778
     --main-bg-color: #171259
-    --main-bg-work: #CDD7CF
     --main-bg-primary: #FF6237
-    --main-bg-work: #CDD7CF
-    --main-stroke-work: #93A998
-    --main-work-primary: #FF6237
+    --main-bg-work: #1C1C1C
+    --main-work-primary: #E8E8E8
     --main-bg-about: #E43E2C
     --main-about-primary: #FFD24B
-    --main-bg-shop: #131313
-    --main-shop-primary: #E2E2E2
+    --main-bg-shop: #1C1C1C
+    --main-shop-primary: #E8E8E8
 
 body
     font-size 16px
