--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -377,3 +377,7 @@ body.thredx .logo path
     object-fit: cover
     height: 100vh
     display: block
+
+.col-4 .case-pic,
+.col-4 img
+    height: 100%
