--- a/assets/main.css
+++ b/assets/main.css
@@ -15,15 +15,13 @@ body {
 :root {
   --main-yellow: #fbf778;
   --main-bg-color: #171259;
-  --main-bg-work: #cdd7cf;
   --main-bg-primary: #ff6237;
-  --main-bg-work: #cdd7cf;
-  --main-stroke-work: #93a998;
-  --main-work-primary: #ff6237;
+  --main-bg-work: #1c1c1c;
+  --main-work-primary: #e8e8e8;
   --main-bg-about: #e43e2c;
   --main-about-primary: #ffd24b;
-  --main-bg-shop: #131313;
-  --main-shop-primary: #e2e2e2;
+  --main-bg-shop: #1c1c1c;
+  --main-shop-primary: #e8e8e8;
 }
 body {
   font-size: 16px;
@@ -2077,6 +2075,10 @@ body.thredx .logo path {
   height: 100vh;
   display: block;
 }
+.col-4 .case-pic,
+.col-4 img {
+  height: 100%;
+}
 body.contact {
   color: #2cafc7;
   background-color: #131313;
@@ -2436,22 +2438,6 @@ body.work {
   color: var(--main-work-primary);
   background-color: var(--main-bg-work);
 }
-.work .wrapper {
-  background-image: url("../assets/images/pen.svg");
-  background-repeat: no-repeat;
-  background-position: 100% 0;
-  background-size: 500px;
-}
-@media (min-width: 2000px) {
-  .work .wrapper {
-    background-size: 730px;
-  }
-}
-@media (max-width: 767px) {
-  .work .wrapper {
-    background-image: none;
-  }
-}
 body.work .logo path {
   fill: var(--main-work-primary);
 }
@@ -2478,7 +2464,7 @@ body.work .logo path {
   }
 }
 .work .wrapper-inner {
-  padding: 0 2rem;
+  padding: 0 2.5rem;
 }
 @media (max-width: 767px) {
   .work .wrapper-inner {
@@ -2486,140 +2472,139 @@ body.work .logo path {
   }
 }
 .case-wrapper {
-  margin-top: 11vw;
+  margin: 6vw 0 16vw 0;
+  padding: 0 2.5rem;
 }
 @media (max-width: 767px) {
   .case-wrapper {
-    margin-top: 5rem;
+    padding: 0 1rem;
+    margin-bottom: 8rem;
+    margin-top: 0;
   }
 }
-.animate__animated.case-small {
-  animation-duration: 0.6s;
-}
-.case-small:last-child {
-  height: 210px;
-}
-@media (max-width: 767px) {
-  .case-small:last-child {
-    height: 160px;
-  }
-}
-.case-small:last-child .case-small__inner:hover {
-  transform: translateY(0);
-}
-.active.case-small {
-  z-index: 2;
-  border-top: none;
-}
-.active .case-small__inner {
-  background: var(--background);
-  color: var(--text);
-  border-top: none;
-  transform-origin: center center;
-}
-.active .case-small__inner > * {
-  opacity: 0;
-}
-.case-small__inner {
-  display: flex;
-  border-top: 0.5px solid var(--main-stroke-work);
-  background-color: var(--main-bg-work);
-  padding: 1.5rem 2rem 2rem;
-  width: 100%;
-  transition: 0.6s cubic-bezier(0.075, 0.82, 0.165, 1);
-  height: 100%;
-}
-@media (max-width: 767px) {
-  .case-small__inner {
-    padding: 1rem 1rem 0 1rem;
-  }
-}
-.case-small__inner:hover {
-  position: absolute;
-  transform: translateY(-2.5rem);
-  background: var(--background);
-  color: var(--text);
-}
-@media (min-width: 2000px) {
-  .case-small__inner:hover {
-    transform: translateY(-3.5rem);
-  }
-}
-@media (max-width: 767px) {
-  .case-small__inner:hover {
-    transform: translateY(0);
-    background: var(--main-bg-work) !important;
-    color: currentColor !important;
-  }
-}
-.case-small__inner:hover .btn-category {
-  border-color: var(--text);
-  color: var(--text);
-}
-.case-small {
-  background-color: var(--main-bg-work);
-  display: flex;
-  margin-top: -80px;
+.case-medium {
+  width: 40.416666666666664%;
   position: relative;
-  transition: 0.3s;
-  height: 160px;
-  width: 100%;
-  animation-delay: 0.6s;
 }
 @media (max-width: 767px) {
-  .case-small {
-    height: 125px;
+  .case-medium {
+    width: 100%;
   }
 }
-.case-small a {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
+.case-medium-large {
+  width: 56.94444444444444%;
+  position: relative;
 }
-.case-small:nth-child(2) {
-  animation-delay: 0.8s;
+@media (max-width: 767px) {
+  .case-medium-large {
+    width: 100%;
+  }
 }
-.case-small:nth-child(3) {
-  animation-delay: 1s;
+.case-full {
+  position: relative;
 }
-.case-small:nth-child(4) {
-  animation-delay: 1.2s;
-}
-.case-small:nth-child(5) {
-  animation-delay: 1.4s;
-}
-.case-small:nth-child(6) {
-  animation-delay: 1.6s;
-}
-.case-small:nth-child(7) {
-  animation-delay: 1.8s;
-}
-.case-small:nth-child(8) {
-  animation-delay: 2s;
-}
-.case-small:nth-child(9) {
-  animation-delay: 2.2s;
-}
-.case-small:nth-child(10) {
-  animation-delay: 2.4s;
-}
-.case-small:nth-child(11) {
-  animation-delay: 2.6s;
-}
-.case-small h2 {
-  font-size: clamp(2.5rem, 5.25vw, 5.625rem);
-  line-height: 1.1;
-  margin-right: 1rem;
-}
-.category-wrapper {
+.case-row {
   display: flex;
+  grid-gap: 2.5rem;
+  margin-bottom: 9vw;
 }
 @media (max-width: 767px) {
-  .category-wrapper {
-    display: none;
+  .case-row {
+    width: 100%;
+    flex-direction: column;
+    grid-gap: 3rem;
+    margin-bottom: 3rem;
   }
+}
+.case-wrapper img,
+.case-wrapper video {
+  border-radius: 6px;
+}
+.case-medium__inner {
+  position: relative;
+}
+.case-medium__inner h2,
+.case-medium__inner p {
+  margin-right: 2.5rem;
+}
+.case-medium-large .case-medium__inner h2,
+.case-medium-large .case-medium__inner p {
+  margin-right: 5rem;
+}
+.case-medium img,
+.case-medium video {
+  height: 45vh;
+  object-fit: cover;
+  width: 100%;
+  margin-bottom: 1.5rem;
+}
+@media (max-width: 767px) {
+  .case-medium img,
+  .case-medium video {
+    height: 50vh;
+  }
+}
+.case-medium-large img,
+.case-medium-large video {
+  height: 65vh;
+  object-fit: cover;
+  width: 100%;
+  margin-bottom: 1.5rem;
+}
+@media (max-width: 767px) {
+  .case-medium-large img,
+  .case-medium-large video {
+    height: 50vh;
+  }
+}
+.case-full img,
+.case-full video {
+  height: 70vh;
+  object-fit: cover;
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .case-full img,
+  .case-full video {
+    height: 50vh;
+  }
+}
+.case-full {
+  margin-bottom: 9vw;
+  margin-left: -2.5rem;
+  margin-right: -2.5rem;
+}
+@media (max-width: 767px) {
+  .case-full {
+    margin-left: -1rem;
+    margin-right: -1rem;
+    margin-bottom: 3rem;
+  }
+}
+.case-full img,
+.case-full video {
+  margin-bottom: 2.5rem;
+  border-radius: 0;
+}
+@media (max-width: 767px) {
+  .case-full img,
+  .case-full video {
+    margin-bottom: 1.5rem;
+  }
+}
+.case-full__inner__text {
+  width: 60%;
+  padding-left: 2.5rem;
+}
+@media (max-width: 767px) {
+  .case-full__inner__text {
+    width: 100%;
+    padding-left: 1rem;
+  }
+}
+.case-medium__inner >*:last-child,
+.case-full__inner >*:last-child {
+  margin-bottom: 0;
 }
 .btn {
   padding: 1rem 2rem;
@@ -2828,7 +2813,7 @@ body.work .logo path {
   position: absolute;
   right: -60px;
   max-width: 23vw;
-  bottom: 120px;
+  bottom: 100px;
 }
 @media (max-width: 767px) {
   .footer-graphic-two {
@@ -2991,6 +2976,7 @@ body.work .logo path {
 }
 @media (max-width: 767px) {
   .header nav {
+    visibility: hidden;
     position: fixed;
     left: 0;
     right: 0;
@@ -3003,8 +2989,7 @@ body.work .logo path {
     align-items: center;
     justify-content: center;
     display: flex;
-    transition: 0.6s ease;
-    visibility: hidden;
+    transition: opacity 0.6s ease;
     opacity: 0;
   }
   .header ul {
