--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -268,6 +268,9 @@ body.thredx .logo path
     &--text
         margin-bottom: 1rem
 
+    &--big-margin
+        margin-bottom: 7.668vw
+
     img
         object-fit: cover
         object-position: center
