--- a/src/css/wrapper.styl
+++ b/src/css/wrapper.styl
@@ -1,6 +1,12 @@
 .wrapper
     padding: 9rem 2.5rem 0 2.5rem
 
+    &--margin
+        margin-bottom: 7rem
+
+        @media $mobile
+            margin-bottom: 0
+
     @media $desktop-xl
         padding: 12rem 2.5rem 0 2.5rem
 
