--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -271,6 +271,9 @@ body.thredx .logo path
     &--big-margin
         margin-bottom: 7.668vw
 
+        @media $mobile
+            margin-bottom: 15.336vw
+
     img
         object-fit: cover
         object-position: center
