--- a/src/css/pages/shop.styl
+++ b/src/css/pages/shop.styl
@@ -22,6 +22,7 @@ body.shop .logo path
 
     @media $mobile
         width: 100%
+        margin: 0 auto 10vw
 
 .shop .wrapper
     padding: 9rem 0 0 0
