--- a/src/css/header.styl
+++ b/src/css/header.styl
@@ -17,6 +17,8 @@
         left: 1rem;
         right: 1rem;
         top: 1.5rem;
+        opacity: 1 !important
+        position absolute
 
 .logo
     margin: 0
