--- a/src/css/elements/button.styl
+++ b/src/css/elements/button.styl
@@ -9,6 +9,7 @@
     background: transparent
     font-size: clamp(1rem, .9vw + 0.5rem, 1.5rem);
     cursor pointer
+    transition: ease-in .3s;
 
     &.play-reel
 
