--- a/src/css/header-big.styl
+++ b/src/css/header-big.styl
@@ -73,7 +73,7 @@
 .header-big h2,
 .btn-wrapper .btn,
 video
-    transition: .6s
+    transition: opacity 0.6s, background-color 0.6s, color .6s;
     opacity: 1
 
 .active-reel
