--- a/src/css/header-big.styl
+++ b/src/css/header-big.styl
@@ -35,7 +35,7 @@
     right: 0;
     bottom: 0;
     z-index: -1
-    background: #08052d
+    background: #080619
     overflow: hidden
 
     video
