--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -51,6 +51,7 @@ h1, h2, p, li, a
             display block
             animation slideUp 1s cubic-bezier(0.075, 0.82, 0.165, 1) forwards
             transform translate3d(0, 100%, 0)
+            letter-spacing: -0.3px
 
 .delay-text
     span
