--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -20,16 +20,16 @@ body.hom
     transition: 0s;
 
 body.hom .logo path 
-    fill: #DC5842
+    fill: #1e2524
 
 .hom .text-link
-    color: #DC5842
+    color: #1e2524
 
 .hom .header nav a::before 
-    background: #DC5842   
+    background: #1e2524   
 
 .hom .menu-icon span {
-    background-color: #DC5842
+    background-color: #1e2524
 }
 
 body.ls 
@@ -155,6 +155,23 @@ body.thredx .logo path
 
 .thredx .menu-icon span {
     background-color: #fff
+}
+
+body.buddies 
+    background-color: #F4F2E4
+    transition: 0s;
+
+body.buddies .logo path 
+    fill: #FF0000
+
+.buddies .text-link
+    color: #FF0000
+
+.buddies .header nav a::before 
+    background: #FF0000
+
+.buddies .menu-icon span {
+    background-color: #FF0000
 }
 
 .case .wrapper-inner
@@ -304,6 +321,13 @@ body.thredx .logo path
         grid-column-start: 4;
         grid-column-end: 10;
         text-align: center
+
+    &--masonry-1
+        margin-top: 8rem
+        margin-bottom: 0
+
+    &--masonry-2
+        margin-top: -8rem
 
 .col-7
     grid-column: span 7;
