--- a/assets/main.css
+++ b/assets/main.css
@@ -51,6 +51,7 @@ a span > span {
   display: block;
   animation: slideUp 1s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
   transform: translate3d(0, 100%, 0);
+  letter-spacing: -0.3px;
 }
 .delay-text span {
   display: inline-block;
@@ -1153,6 +1154,12 @@ p,
   font-family: p22-mackinac-pro, serif;
   font-weight: 800;
 }
+.client-name {
+  font-family: p22-mackinac-pro, serif;
+  font-weight: 800;
+  font-size: clamp(1rem, 1.5vw, 2rem);
+  margin: 0;
+}
 .text-link {
   font-size: clamp(1rem, 1.5vw, 2rem);
   margin: 0 0 1rem;
@@ -1209,21 +1216,6 @@ p,
   transform-origin: 0% 50%;
   transform: scale3d(1, 1, 1);
 }
-.uppercase {
-  text-transform: uppercase;
-  text-align: center;
-  font-weight: 900;
-  line-height: 1.3;
-  margin-bottom: -6rem;
-}
-@media (max-width: 767px) {
-  .uppercase {
-    font-size: clamp(1.5rem, 4.1vw, 5rem);
-    text-transform: none;
-    text-align: left;
-    margin-bottom: 0;
-  }
-}
 .fullsize-link {
   position: absolute;
   left: 0;
@@ -1239,7 +1231,7 @@ a {
 .small-margin {
   margin: 0 0 0.5rem;
 }
-.header {
+#header {
   position: fixed;
   left: 2.5rem;
   right: 2.5rem;
@@ -1251,11 +1243,11 @@ a {
   opacity: 1;
   transition: 0.3s ease-in;
 }
-.header.hide {
+#header.hide {
   opacity: 0;
 }
 @media (max-width: 767px) {
-  .header {
+  #header {
     left: 1rem;
     right: 1rem;
     top: 1.5rem;
@@ -1277,18 +1269,18 @@ a {
 .logo path {
   transition: 0.3s ease-in;
 }
-.header nav .active a::before {
+#header nav .active a::before {
   transform-origin: 0% 50%;
   transform: scale3d(1, 1, 1);
 }
-.header nav a {
+#header nav a {
   font-size: clamp(1rem, 1.3vw, 1.625rem);
   text-decoration: none;
   font-weight: 500;
   position: relative;
 }
 @media (max-width: 767px) {
-  .header nav a {
+  #header nav a {
     font-family: p22-mackinac-pro, serif;
     font-weight: 800;
     font-size: 3rem;
@@ -1297,7 +1289,7 @@ a {
     color: currentColor !important;
   }
 }
-.header nav a::before {
+#header nav a::before {
   content: '';
   position: absolute;
   width: 100%;
@@ -1310,31 +1302,31 @@ a {
   transition: transform 0.3s;
 }
 @media (max-width: 767px) {
-  .header nav a::before {
+  #header nav a::before {
     height: 3px;
     background: var(--main-yellow) !important;
   }
 }
-.header nav a:hover::before {
+#header nav a:hover::before {
   transform-origin: 0% 50%;
   transform: scale3d(1, 1, 1);
 }
-.header ul {
+#header ul {
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
 }
-.header li {
+#header li {
   margin: 0 0 0 2rem;
   padding: 0;
 }
 @media (max-width: 767px) {
-  .header li {
+  #header li {
     margin: 0 0 0 1rem;
   }
 }
-.header li:first-child {
+#header li:first-child {
   margin: 0;
 }
 .header-big {
@@ -1378,7 +1370,7 @@ a {
   right: 0;
   bottom: 0;
   z-index: -1;
-  background: #08052d;
+  background: #080619;
   overflow: hidden;
 }
 .header-big__bg video {
@@ -1704,16 +1696,16 @@ body.hom {
   transition: 0s;
 }
 body.hom .logo path {
-  fill: #dc5842;
+  fill: #1e2524;
 }
 .hom .text-link {
-  color: #dc5842;
+  color: #1e2524;
 }
 .hom .header nav a::before {
-  background: #dc5842;
+  background: #1e2524;
 }
 .hom .menu-icon span {
-  background-color: #dc5842;
+  background-color: #1e2524;
 }
 body.ls {
   background-color: #000;
@@ -1832,6 +1824,22 @@ body.thredx .logo path {
 }
 .thredx .menu-icon span {
   background-color: #fff;
+}
+body.buddies {
+  background-color: #f4f2e4;
+  transition: 0s;
+}
+body.buddies .logo path {
+  fill: #f00;
+}
+.buddies .text-link {
+  color: #f00;
+}
+.buddies .header nav a::before {
+  background: #f00;
+}
+.buddies .menu-icon span {
+  background-color: #f00;
 }
 .case .wrapper-inner {
   padding: 0 2.5rem;
@@ -2003,6 +2011,13 @@ body.thredx .logo path {
   grid-column-end: 10;
   text-align: center;
 }
+.col-6--masonry-1 {
+  margin-top: 8rem;
+  margin-bottom: 0;
+}
+.col-6--masonry-2 {
+  margin-top: -8rem;
+}
 .col-7 {
   grid-column: span 7;
 }
@@ -2160,11 +2175,17 @@ h5,
 }
 .front .wrapper-inner {
   padding: 11.112vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 @media (max-width: 767px) {
   .front .wrapper-inner {
     padding: 4rem 1rem;
   }
+}
+.front .wrapper-inner p {
+  max-width: 70%;
 }
 .front .wrapper {
   position: relative;
@@ -2235,7 +2256,7 @@ h5,
   }
 }
 #swoosh rect {
-  fill: var(--main-yellow);
+  fill: #fff;
 }
 .swoosh-title {
   display: none;
@@ -2268,21 +2289,40 @@ h5,
 .swoosh-title--active.title-1 span:nth-child(2) span {
   animation-delay: 1.4s !important;
 }
+.cta-front {
+  width: 80%;
+  margin: 0 auto;
+}
+.cta-front h2 {
+  margin-bottom: 1rem;
+}
 body.front {
-  color: var(--main-yellow);
-  background-color: var(--main-bg-color);
+  color: #fff;
+  background-color: #171259;
 }
 body.front .logo path {
-  fill: var(--main-yellow);
+  fill: #fff;
 }
-.front .header nav a {
-  color: var(--main-yellow);
+.front #header nav a {
+  color: #fff;
 }
-.front .header nav a::before {
-  background: var(--main-yellow);
+.front #header nav a::before {
+  background: #fff;
 }
 .front .menu-icon span {
-  background-color: var(--main-yellow);
+  background-color: #fff;
+}
+.front #header.nori-active path {
+  fill: #040875;
+}
+.front #header.nori-active nav a {
+  color: #040875;
+}
+.front #header.nori-active nav a::before {
+  background: #040875;
+}
+.front .nori-active .menu-icon span {
+  background-color: #040875;
 }
 .shadow-front {
   position: absolute;
@@ -2293,7 +2333,7 @@ body.front .logo path {
 }
 @media (max-width: 767px) {
   .shadow-front {
-    top: -1rem;
+    top: -2rem;
   }
 }
 .shadow-front-bottom {
@@ -2306,7 +2346,7 @@ body.front .logo path {
 }
 @media (max-width: 767px) {
   .shadow-front-bottom {
-    bottom: -1rem;
+    bottom: -2rem;
   }
 }
 .front-info {
@@ -2651,9 +2691,22 @@ body.work .logo path {
 .btn--outline {
   border: 1px solid var(--btn-color);
 }
+.btn--outline svg {
+  stroke: var(--btn-color);
+  width: clamp(1rem, 1.4vw, 1.5rem);
+  height: clamp(1rem, 1.4vw, 1.5rem);
+  margin-bottom: -4px;
+}
+.btn--outline svg path {
+  stroke: var(--btn-color);
+  transition: ease-in 0.3s;
+}
 .btn--outline:hover {
   background-color: var(--btn-color);
   color: var(--btn-text);
+}
+.btn--outline:hover svg path {
+  stroke: var(--btn-text);
 }
 .btn-wrapper {
   display: flex;
@@ -2695,16 +2748,38 @@ body.work .logo path {
   color: var(--text-color);
   position: relative;
 }
+.case-intro::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 370px;
+  background: linear-gradient(0deg, #000 0%, rgba(0,0,0,0) 100%);
+  opacity: 0.2;
+}
 .case-intro .fullsize-link {
   display: block;
 }
+.case-intro .btn {
+  z-index: 10;
+  position: absolute;
+  left: 2rem;
+  bottom: 2rem;
+}
+@media (max-width: 767px) {
+  .case-intro .btn {
+    left: 1.5rem;
+  }
+}
 .case-intro__text {
-  padding: 2rem;
-  background-color: var(--background-color);
+  padding: 2rem 2rem 7rem 2rem;
+  position: absolute;
+  bottom: 0;
 }
 @media (max-width: 767px) {
   .case-intro__text {
-    padding: 1.5rem 1rem;
+    padding: 1.5rem 1rem 6rem 1.5rem;
   }
   .case-intro__text .btn {
     display: none;
@@ -2713,40 +2788,34 @@ body.work .logo path {
 .case-intro__pic {
   display: block;
   object-fit: cover;
-  height: 40vw;
+  height: 100vh;
   width: 100%;
   object-position: 50% 40%;
 }
-@media (max-width: 767px) {
-  .case-intro__pic {
-    height: 100vw;
-  }
-}
 .case-intro__text__inner {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  color: var(--case-color);
 }
-@media (max-width: 767px) {
-  .case-intro__text__inner {
-    flex-direction: column;
-  }
+.case-intro__text__inner .btn--outline {
+  display: inline-block;
+}
+.case-intro__text__inner h2 {
+  width: 62%;
+  margin: 0;
 }
 @media (max-width: 767px) {
   .case-intro__text__inner h2 {
     flex-direction: column;
     margin-bottom: 0;
+    width: 100%;
   }
 }
 .case-intro__text__inner p {
+  width: 50%;
   margin-top: 0.75rem;
 }
-.case-intro__text__inner > * {
-  width: 50%;
-}
 @media (max-width: 767px) {
-  .case-intro__text__inner > * {
-    width: 100%;
+  .case-intro__text__inner p {
+    margin-bottom: 0.5rem;
   }
 }
 .big-footer {
@@ -2980,17 +3049,17 @@ body.work .logo path {
 .active-menu .logo path {
   fill: var(--main-yellow) !important;
 }
-.active-menu.header nav {
+.active-menu#header nav {
   opacity: 1;
-  visibility: visible;
+  visibility: bodyvisible;
 }
 @media (max-width: 767px) {
-  .header.active-menu {
+  #header.active-menu {
     mix-blend-mode: normal !important;
   }
 }
 @media (max-width: 767px) {
-  .header nav {
+  #header nav {
     visibility: hidden;
     position: fixed;
     left: 0;
@@ -3007,10 +3076,10 @@ body.work .logo path {
     transition: opacity 0.6s ease;
     opacity: 0;
   }
-  .header ul {
+  #header ul {
     flex-direction: column;
   }
-  .header li {
+  #header li {
     text-align: center;
   }
 }
