--- a/src/css/elements/button.styl
+++ b/src/css/elements/button.styl
@@ -22,9 +22,22 @@
     &--outline
         border: 1px solid var(--btn-color)
 
+        svg
+            stroke: var(--btn-color)
+            width: clamp(1rem, .9vw + 0.5rem, 1.5rem);
+            height: clamp(1rem, .9vw + 0.5rem, 1.5rem);
+            margin-bottom: -4px
+
+        svg path
+            stroke: var(--btn-color)
+            transition: ease-in .3s;
+
         &:hover
             background-color: var(--btn-color)
             color: var(--btn-text)
+
+            svg path
+                stroke: var(--btn-text)
 
 .btn-wrapper
     display: flex
