--- a/src/css/typography.styl
+++ b/src/css/typography.styl
@@ -68,6 +68,12 @@ p,
     font-family: p22-mackinac-pro, serif;
     font-weight: 800
 
+.client-name
+    font-family: p22-mackinac-pro, serif;
+    font-weight: 800
+    font-size: clamp(1rem, 1vw + 0.5rem, 2rem);
+    margin: 0
+
 .text-link
     font-size: clamp(1rem, 1vw + 0.5rem, 2rem);
     margin: 0 0 1rem
@@ -121,19 +127,6 @@ p,
     &:hover::before 
         transform-origin: 0% 50%;
         transform: scale3d(1, 1, 1);
-
-.uppercase
-    text-transform: uppercase
-    text-align: center
-    font-weight: 900
-    line-height: 1.3
-    margin-bottom: -6rem;
-
-    @media $mobile
-        font-size: clamp(1.5rem, 4.1vw, 5rem);
-        text-transform: none;
-        text-align: left;
-        margin-bottom: 0
 
 .fullsize-link
     position absolute
