--- a/src/css/elements/button.styl
+++ b/src/css/elements/button.styl
@@ -42,6 +42,8 @@
 .btn-wrapper
     display: flex
     margin-top: 1rem
+    position relative
+    z-index: 10
 
     @media $mobile
         flex-direction: column
