--- a/src/css/header-big.styl
+++ b/src/css/header-big.styl
@@ -9,24 +9,10 @@
     text-align: center;
     justify-content: center;
     overflow: hidden
+    border-radius: 0 0 40px 40px;
 
     @media $mobile
         padding: 0 1rem
-
-.header-big h1 
-    width: 58%
-    padding-top: 32px
-    margin: 0 0 .3rem
-
-    @media $mobile
-        width: 100%
-        padding: 0
-        margin: 0 0 .25rem
-
-.header-big h2.heading-one
-
-    @media $mobile
-        margin-bottom: 0
 
 .header-big__bg 
     position: absolute;
@@ -40,7 +26,6 @@
 
     video
         pointer-events: none;
-        opacity: 0.1;
         width: 100%;
         height: 100%;
         object-fit: cover;
