--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -15,11 +15,11 @@ html, body
     --main-yellow: #FBF778
     --main-bg-color: #171259
     --main-bg-primary: #FF6237
-    --main-bg-work: #1C1C1C
+    --main-bg-work: #0e0e0e
     --main-work-primary: #E8E8E8
     --main-bg-about: #E43E2C
     --main-about-primary: #FFD24B
-    --main-bg-shop: #1C1C1C
+    --main-bg-shop: #0e0e0e
     --main-shop-primary: #E8E8E8
 
 body
