--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -174,6 +174,19 @@ body.buddies .logo path
     background-color: #FF0000
 }
 
+.case-vid
+    width: 100%
+    height: auto
+
+.work .wrapper-inner
+    margin-top: 6vw
+
+    .big-header-one
+        margin-bottom: 3rem
+
+        @media $mobile
+            margin-bottom: 1rem
+
 .case .wrapper-inner
     padding: 0 2.5rem;
     display: grid;
