--- a/src/css/pages/home.styl
+++ b/src/css/pages/home.styl
@@ -1,5 +1,8 @@
 body.front 
     color: #fff;
+    background-color: #080619;
+
+.front .wrapper
     background-color: #171259;
 
 body.front .logo path 
@@ -33,7 +36,7 @@ body.front .logo path
     top: -6rem
     left: 0
     right: 0
-    z-index: -1
+    z-index: 0
 
     @media $mobile
         top: -2rem
@@ -43,7 +46,7 @@ body.front .logo path
     bottom: -6rem
     left: 0
     right: 0
-    z-index: -1
+    z-index: 0
     transform: rotate(180deg)
 
     @media $mobile
@@ -55,8 +58,7 @@ body.front .logo path
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 15vw 0 12vw;
-    overflow: hidden
+    padding: 12vw 0;
 
     @media $mobile
         padding: 5rem 0
@@ -66,6 +68,11 @@ body.front .logo path
     padding: 0 2rem
     text-align: center
     max-width: 60%
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
 
     @media $mobile
         max-width: 100%
@@ -75,3 +82,6 @@ body.front .logo path
             font-size: clamp(2rem, 4.6vw, 7.625rem);
             line-height: 1.1;
             margin: 0;
+
+    h1
+        margin-bottom: .5rem
