--- a/src/css/header.styl
+++ b/src/css/header.styl
@@ -67,7 +67,7 @@
 
         @media $mobile
             height: 3px
-            background: var(--main-yellow) !important
+            background: #fff !important
 
 
     &:hover::before 
