--- a/src/css/pages/home.styl
+++ b/src/css/pages/home.styl
@@ -73,6 +73,8 @@ body.front .logo path
     flex-direction: column;
     text-align: center;
     justify-content: center;
+    overflow: hidden
+    position relative
 
     @media $mobile
         max-width: 100%
