--- a/src/css/pages/front.styl
+++ b/src/css/pages/front.styl
@@ -104,6 +104,11 @@
 .cta-front
     width: 80%
     margin: 0 auto
+    position relative
+    z-index: 2
+
+    @media $mobile
+        width: 100%
 
     h2
         margin-bottom: 1rem
